# NeuroCurve

./: NeuroAdaptiveCurve.py  README.md  build.bat  package-lock.json  package.json  pnpm-lock.yaml
src/: index.html  main.js  plot-panel.css  plot.css  settings.css  styles.css  window-controls.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cailbration.rs  lib.rs  main.rs  old_app.rs
