[package]
name = "neurocurve"
version = "1.0.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "neurocurve_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy", branch = "dev" }
