[package]
name = "neurocurve"
version = "1.03"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "neurocurve_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy", branch = "dev" }

bevy = { version = "0.15.3" }
winit = { version = "0.30.9", features = ["rwh_05"] }
bevy_fps_controller = { git = "https://github.com/svdragster/bevy_fps_controller.git", branch = "main" }
bevy_rapier3d = "0.29.0"
rand = "0.9.0"
bevy_diagnostic = "0.15.3"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
